--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.dukescript.api/leaflet4j -->
+<!--        <dependency>-->
+<!--            <groupId>com.dukescript.api</groupId>-->
+<!--            <artifactId>leaflet4j</artifactId>-->
+<!--            <version>0.7</version>-->
+<!--        </dependency>-->
+
+
+        <!-- https://mvnrepository.com/artifact/com.dukescript.amaronui.layouts/jfxflexbox -->
+        <dependency>
+            <groupId>com.dukescript.amaronui.layouts</groupId>
+            <artifactId>jfxflexbox</artifactId>
+            <version>0.4</version>
+        </dependency>
+    </dependencies>
+
     <groupId>groupId</groupId>
     <artifactId>Desktop</artifactId>
     <version>1.0-SNAPSHOT</version>
