--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,30 @@
 
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/com.dukescript.api/leaflet4j -->
-<!--        <dependency>-->
-<!--            <groupId>com.dukescript.api</groupId>-->
-<!--            <artifactId>leaflet4j</artifactId>-->
-<!--            <version>0.7</version>-->
-<!--        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+<!--            <scope>provided</scope>-->
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.9.0</version>
+        </dependency>
+
+
 
 
         <!-- https://mvnrepository.com/artifact/com.dukescript.amaronui.layouts/jfxflexbox -->
