--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
             <version>3.9.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>8.40.14</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.dukescript.amaronui.layouts/jfxflexbox -->
         <dependency>
             <groupId>com.dukescript.amaronui.layouts</groupId>
